Thay dodoir dia chi

--- a/wp-content/themes/rula/style.css
+++ b/wp-content/themes/rula/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: rula
+Theme Name: Danh Gia Vọng Tộc
 Theme URI: http://underscores.me/
 Author: Underscores.me
 Author URI: http://underscores.me/
@@ -9,7 +9,7 @@ Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: rula
+Text Domain: Danh Gia Vọng Tộc
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 /* -----------------------------------------------------------------------------------
 
