--- a/wp-content/themes/rula/style.css
+++ b/wp-content/themes/rula/style.css
@@ -543,7 +543,7 @@ h3 {
     text-align: center;
 }
 .logo-img {
-    width: 110px;
+    width: 64px;
     margin-bottom: 5px;
 }
 .dropdown:hover .dropdown-menu,
@@ -1177,7 +1177,7 @@ h3 {
     margin-bottom: 0;
 }
 .services .item img {
-    width: 60px;
+    /* width: 60px; */
     margin-bottom: 20px;
 }
 .services .item .numb {
